2005-12-02  9:40 Mike Park  <mike.park@nasa.gov>

	* src/gridinsert.c (gridFindEnclosingCell) removed, 
	moved to src/grid.c.
	* src/grid.c (gridFindEnclosingCell) added, taken form
	src/gridinsert.c, to utilize the `least astonishment'
	principle, starting_guess now refers to a cell instead
	of a node.
	src/grid.c now requires src/gridmath.h, changing thier
	relative dependency.

2005-12-02  8:41 Mike Park  <mike.park@nasa.gov>

	* src/grid.c (gridMap,gridSetMap) Started to implement logic that
	will ignore grid->map id NULL and interpolate metric in child
	grid. (I have sketched out how gridMap will look, but not
	implented.)

2005-12-01 11:25 Mike Park  <mike.park@nasa.gov>

	* src/grid.c (gridRenumber) to simplfy logic around renumber
	of nodeGlobal and part, removed nested if-then.
	* src/grid.c (gridPack,gridRenumber,gridAddNodeWithGlobal) to
	handle child_reference consistantly with other node based data
	if allocated ( != NULL ),

2005-12-01 10:33 Mike Park  <mike.park@nasa.gov>

	* src/grid.c (gridImport,gridFree) added child_reference to grid
	struct. test if map is null before free.
	* src/grid.c (gridCacheCurrentGridAndMap) free map and setup
	child_reference to nearby cell.

2005-11-29 19:23 Mike Park  <mike.park@nasa.gov>

	* src/grid.c (gridDup) constructed from gridCacheCurrentGridAndMap
	to create a duplicate grid.
	* src/grid.c (gridCacheCurrentGridAndMap) refactored to call gridDup.

2005-11-22 22:57 Mike Park  <mike.park@nasa.gov>

	* src/grid.c (gridImport,gridFree) initialize parent and child to
	NULL and free.
	* src/grid.c (gridCacheCurrentGridAndMap) started (not complete)
	method to save off current grid and matric.

2005-11-22 22:55 Mike Park  <mike.park@nasa.gov>

	* Made 1.2.9 Release. ** internal release ** Tagging to start
	work on a keeping original mesh around to interpolate metric.

2005-11-22 10:25 Mike Park  <mike.park@nasa.gov>

	* src/px_main.c (main) Only optimize volume for all orders to have