@@ -1,3 +1,11 @@
+2005-12-03 16:19 Mike Park  <mike.park@nasa.gov>
+
+	* src/grid.c (gridFindEnclosingCell) also returns bary.
+	* src/grid.c (gridBarycentricCoordinate) new method to find
+	the barycnetric coordinate, based on a position. (note
+	that this method needs to be tested and could use better
+	numerics to solve for bary).
+
 2005-12-02  9:40 Mike Park  <mike.park@nasa.gov>
 
 	* src/gridinsert.c (gridFindEnclosingCell) removed, 
